--- a/YSUthesis.cfg
+++ b/YSUthesis.cfg
@@ -124,23 +124,23 @@
 %%
 \def\CTEX@chapter@nameformat{\heiti\zihao{-2}}
 \def\CTEX@chapter@titleformat{\hspace{-0.35em}\heiti\zihao{-2}}%%%%mzhy55
-\def\CTEX@chapter@beforeskip{-5mm}
-\def\CTEX@chapter@afterskip{5mm}
+\def\CTEX@chapter@beforeskip{1\baselineskip \@plus .2ex \@minus -.2ex}
+\def\CTEX@chapter@afterskip{0.8\baselineskip \@plus .2ex \@minus -.2ex}
 %%
 %% the section title format
 %%
 \def\CTEX@section@format{\heiti\zihao{-3}}
 \def\CTEX@section@titleformat{\hspace{-0.35em}\heiti\zihao{-3}}%%%%mzhy55
-\def\CTEX@section@beforeskip{0.25\baselineskip \@plus .2ex \@minus -.2ex}
-\def\CTEX@section@afterskip{0.25\baselineskip \@plus .2ex \@minus -.2ex}
+\def\CTEX@section@beforeskip{0.5\baselineskip \@plus .2ex \@minus -.2ex}
+\def\CTEX@section@afterskip{0.5\baselineskip \@plus .2ex \@minus -.2ex}
 %%
 %% the subsection title format
 %%
 \def\CTEX@subsection@format{\heiti\zihao{4}}
 %\def\CTEX@subsection@indent{2\ccwd}
 \def\CTEX@subsection@titleformat{\hspace{-0.35em}\heiti\zihao{4}}%%%%mzhy55
-\def\CTEX@subsection@beforeskip{0.25\baselineskip \@plus .2ex \@minus -.2ex}
-\def\CTEX@subsection@afterskip{0.25\baselineskip \@plus .2ex \@minus -.2ex}
+\def\CTEX@subsection@beforeskip{0.5\baselineskip \@plus .2ex \@minus -.2ex}
+\def\CTEX@subsection@afterskip{0.5\baselineskip \@plus .2ex \@minus -.2ex}
 %%
 %% the subsubsection title format
 %%
@@ -149,7 +149,7 @@
 \def\CTEX@subsubsection@titleformat{\hspace{-0.35em}\heiti\zihao{-4}}%%%%mzhy55
 \def\CTEX@subsubsection@beforeskip{0\baselineskip \@plus .2ex \@minus -.2ex}
 %%%%%{0ex \@plus .2ex \@minus -.2ex}mzhy55
-\def\CTEX@subsubsection@afterskip{0.01\baselineskip \@plus .2ex \@minus -.2ex}
+\def\CTEX@subsubsection@afterskip{0\baselineskip \@plus .2ex \@minus -.2ex}
 %%%%%{0ex \@plus .2ex}mzhy55
 %%
 %% the theorems definitions
